feat(projet-srr): ajout des fichiers manquants